fixing validation errors

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="favicon.ico" />
     <title> Meeting Notes </title>
   </head>
+  <body>
     <header>
         <h1> Meeting Notes </h1>
         <h2> First Brainstorming </h2>
@@ -21,6 +22,7 @@
         <a href="#audio"> Audio </a> <br>
     </nav>
     <main>
+        <div>
         <section id="attendance">
             <h3> Attendance </h3>
             <ul>
@@ -49,7 +51,9 @@
             <p> getting rich (possible ways???) </p>
             <ul>
                 <li> pyramid scheme </li>
-                <img src="media/pyramid.png">
+            </ul>
+                <img src="media/pyramid.png" alt="pie chart of a pyramid">
+            <ul>
                 <li> crypto rug pull </li>
             </ul>
             <hr>
@@ -66,12 +70,10 @@
                 <li> skill issue? </li>
             </ul>
             <h4> Concerns </h4>
-            <ul>
-                    <details> 
-                        <summary> Mojo Jojo </summary> 
-                        an evil genius monkey seeking world domination
-                    </details>  
-            </ul>
+            <details> 
+                <summary> Mojo Jojo </summary> 
+                an evil genius monkey seeking world domination
+            </details>  
         </section>
         <section id="video">
             <h3> Video </h3>
@@ -134,6 +136,5 @@
     <footer>
         <p>© 2023 Grace</p>
     </footer>
-  <body>
   </body>
 </html>
