--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <audio controls src="media/amogus.mp3"></audio>
         </section>
         </div>
-        <form action="" method="get">
+        <form action="/action_page.php" method="get">
             <fieldset>
                 <legend> <h3> Pizza Order Form </h3> </legend>
                 <h4> Size: </h4>
