added flexbox and grid

--- a/index.html
+++ b/index.html
@@ -64,25 +64,30 @@
         </section>
         <section id="misc">
             <h3> Misc </h3>
-            <h4> Comments </h4>
-            <ul>
-                <li> unoriginal name. </li>
-            </ul>
-            <h4> Questions </h4>
-            <ul>
-                <li> skill issue? </li>
-            </ul>
-            <h4> Concerns </h4>
-            <details> 
-                <summary> Mojo Jojo </summary> 
-                an evil genius monkey seeking world domination
-            </details>  
+            <div class="container">
+                <h4> Comments </h4>
+                <ul>
+                    <li> unoriginal name. </li>
+                </ul>
+                <h4> Questions </h4>
+                <ul>
+                    <li> skill issue? </li>
+                </ul>
+                <h4> Concerns </h4>
+                <details> 
+                    <summary> Mojo Jojo </summary> 
+                    an evil genius monkey seeking world domination
+                </details>  
+            </div>
         </section>
         <section id="video">
             <h3> Video </h3>
-            <video controls width="500">
-                <source src="media/subway.mp4">
-            </video>
+            <div class="video">
+                <video controls width="500">
+                    <source src="media/subway.mp4">
+                </video>
+                <p> video caption text </p>
+            </div>
         </section>
         <section id="audio">
             <h3> Audio </h3>
