display and sizing

--- a/index.html
+++ b/index.html
@@ -137,9 +137,12 @@
                 </datalist> <br>
                 <h5> Additional Comments: </h5>
                 <textarea> </textarea> <br>
+                <br>
                 <button> Place Order </button>
             </fieldset>
         </form>
+
+        <p id="hidden"> hidden text :P </p>
     </main>
     <footer>
         <p>© 2023 Grace</p>
