final css selectors

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <section id="attendance">
                 <h3> Attendance </h3>
                 <ul>
-                    <li> <span> Blossom </span> </li>
-                    <li> <span> Bubbles </span> </li>
-                    <li> <span> Buttercup </span> </li>
+                    <li> <span class="blossom"> Blossom </span> </li>
+                    <li> <span class="bubbles"> Bubbles </span> </li>
+                    <li> <span class="buttercup"> Buttercup </span> </li>
                 </ul>
             </section>
             <section id="agenda">
@@ -151,8 +151,14 @@
                 <button> Place Order </button>
             </fieldset>
         </form>
+        <br>
+        <div>
+            <p> direct descendant</p>
+            <span> children </span>
+        </div>
 
         <p id="hidden"> hidden text :P </p>
+        <br>
     </main>
     <footer>
         <p>© 2023 Grace</p>
